create github pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="" class="cid-riMUbbG8kK" id="footer7-8">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="" class="cid-riMUbbG8kK" id="footer7-8">
 
     
 
@@ -71,8 +71,8 @@
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://instagram.com/jeanniesarah.jpg" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span>
+                        <a href="https://github.com" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span>
                         </a>
                     </div><div class="soc-item">
                         <a href="mailto:hello@jeannierombough.com">
